crates/formatter/tests/snapshots/snapshots__synapse__main__delta__85__05_add_instance_names_converted_pos.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2024 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.

-- Add `instance_name` columns to stream tables to allow them to be used with
-- `MultiWriterIdGenerator`
alter table device_lists_changes_converted_stream_position
	add column instance_name text;
