crates/formatter/tests/snapshots/snapshots__synapse__main__delta__85__06_add_room_reports.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2024 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.

create table room_reports (
	id bigint not null primary key,
	received_ts bigint not null,
	room_id text not null,
	user_id text not null,
	reason text not null
);
